# QuanPilot

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  pyproject.toml
docs/validation/: confluence-v1.md
quantpilot/: cli.py  config.py  timeframes.py
quantpilot/backtest/: costs.py  data_loader.py  engine.py  metrics.py  models.py  report.py
quantpilot/dashboard/: api.py  server.py
quantpilot/data/: collector.py  db.py  models.py
quantpilot/exchange/: client.py  instruments.py
quantpilot/paper/: display.py  logsetup.py  models.py  ops.py  store.py  trader.py
quantpilot/risk/: circuit_breaker.py  liquidation.py  sizing.py  take_profit.py
quantpilot/strategy/: base.py  confluence.py  divergence.py  fib.py  pivots.py  (+3 more)
scripts/: run-paper.sh
tests/: conftest.py  test_backtest_models.py  test_circuit_breaker.py  test_cli.py  test_cli_backtest.py  test_cli_paper.py  test_client.py  test_collector.py  test_collector_heal.py  test_config.py  test_confluence.py  test_costs.py  test_dashboard.py  test_data_loader.py  test_divergence.py  test_engine_be_trail.py  test_engine_one_contract.py  test_engine_reuse.py  test_engine_risk_mult.py  test_engine_run.py  test_engine_runner_preserved.py  test_engine_step.py  test_engine_targets.py  test_fib.py  test_indicators.py  test_instruments.py  test_liquidation.py  test_live.py  test_metrics.py  test_models.py  test_paper_display.py  test_paper_equity.py  test_paper_killswitch.py  test_paper_parity.py  test_paper_store.py  test_paper_trader.py  test_pivots.py  test_report.py  test_sizing.py  test_strategy_base.py  (+4 more)
(+21 files in other folders)
